add javaFX libraries and configure javaFX in gradle